# multistream-batch

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  multiline1.txt  multiline2.txt  multiline3.txt
src/: buf_batch.rs  channel.rs  lib.rs  multi.rs  multi_batch.rs  multi_buf_batch.rs  tx_batch.rs
src/buf_batch/: channel.rs
src/channel/: buf_batch.rs  multi_batch.rs  multi_buf_batch.rs  tx_batch.rs  tx_buf_batch.rs
src/multi/: channel.rs
