[package]
name = "multistream-batch"
version = "0.1.0"
authors = ["Jakub Pastuszek <jpastuszek@protonmail.com>"]
description = "Different types and implementations of batching algorithms."
readme = "README.md"
keywords = ["batch", "multiline", "transaction"]
categories = ["algorithms"]
license = "MIT"
edition = "2018"

[features]
default = ["crossbeam-channel"]

[dependencies]
crossbeam-channel = { version = "0.3.8", optional = true }
linked-hash-map = "0.5.2"

[dev-dependencies]
assert_matches = "1.3.0"
