[package]
name = "multistream-batch"
version = "1.1.1-alpha.0"
authors = ["Jakub Pastuszek <jpastuszek@protonmail.com>"]
description = "Implementations of batching algorithms"
repository = "https://sr.ht/~jpastuszek/multistream-batch"
documentation = "https://docs.rs/multistream-batch"
readme = "README.md"
keywords = ["batch", "multiline", "transaction"]
categories = ["algorithms"]
license = "MIT"
edition = "2018"

[features]
default = ["crossbeam-channel"]

[dependencies]
crossbeam-channel = { version = "0.3.8", optional = true }
linked-hash-map = "0.5.4"

[dev-dependencies]
assert_matches = "1.3.0"
